# VisionOCR

./: .clang-format  .gitignore  CMakeLists.txt  README.md  VisionOCR.h  VisionOCR.mm  build_opencv.sh  main.cpp  main.mm  ocr_exports.h
